Bug 55680 - [C++11] Member specialization with lambda is rejected
Summary: [C++11] Member specialization with lambda is rejected
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.7.2
: P3 minor
Target Milestone: 4.8.0
Assignee: Not yet assigned to anyone
URL:
Keywords: c++-lambda
Depends on:
Blocks: lambdas
  Show dependency treegraph
 
Reported: 2012-12-13 23:02 UTC by Lewis Wall
Modified: 2022-11-30 21:04 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lewis Wall 2012-12-13 23:02:35 UTC
==== CONTENTS OF speclambda.cpp ====
template <class T> struct X {
    static void (* code ) ();
};
template <> void (* X<int>::code ) () = [](){};
int main () { return 0; }
====================================

==== OUTPUT OF g++-4.7 -std=c++11 ====
speclambda.cpp:4:42: error: explicit specialization of non-template ‘<lambda>’
======================================

It succeeds if I specialize the whole struct instead of just the one member.
The same error occurs if the type of 'code' is std::function<void ()>.
The same error occurs during any kind of static member specialization whose initializer contains a lambda (such as an initializer that calls a constructor with a lambda as an argument).

I'm not 100% certain this is valid code, but even if it is invalid, the error message is quite misleading.

==== OUTPUT OF g++-4.7 -v ====
Using built-in specs.
COLLECT_GCC=g++-4.7
COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-linux-gnu/4.7/lto-wrapper
Target: x86_64-linux-gnu
Configured with: ../src/configure -v --with-pkgversion='Ubuntu/Linaro 4.7.2-11precise2' --with-bugurl=file:///usr/share/doc/gcc-4.7/README.Bugs --enable-languages=c,c++,go,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-4.7 --enable-shared --enable-linker-build-id --with-system-zlib --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/4.7 --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --enable-gnu-unique-object --enable-plugin --enable-objc-gc --disable-werror --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64 --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu
Thread model: posix
gcc version 4.7.2 (Ubuntu/Linaro 4.7.2-11precise2) 
==============================
Comment 1 Daniel Krügler 2012-12-15 16:44:08 UTC
The same problem exists for gcc 4.8.0 20121209 (experimental). The code looks valid to me. I tried to deduce the root of the compiler problem here. For example trying to rewrite it as

typedef void (*code_t) ();

template <>
code_t X<double>::code = [](){};

but the error still exists.
Comment 2 Jason Merrill 2013-02-14 04:30:36 UTC
Author: jason
Date: Thu Feb 14 04:30:26 2013
New Revision: 196042

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196042
Log:
	PR c++/55680
	* pt.c (maybe_process_partial_specialization): A lambda
	isn't what's being specialized.

Added:
    trunk/gcc/testsuite/g++.dg/cpp0x/lambda/lambda-template8.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/pt.c
Comment 3 Paolo Carlini 2013-02-14 23:37:43 UTC
Fixed for 4.8.0.