re PR c++/55680 ([C++11] Member specialization with lambda is rejected)

PR c++/55680
	* pt.c (maybe_process_partial_specialization): A lambda
	isn't what's being specialized.

From-SVN: r196042